--- a/list-processing/pom.xml
+++ b/list-processing/pom.xml
@@ -30,6 +30,13 @@
       <version>3.0.1</version>
       <scope>provided</scope>
     </dependency>
+     
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.2</version>
+        <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
