--- a/list-processing/pom.xml
+++ b/list-processing/pom.xml
@@ -38,6 +38,11 @@
         <scope>compile</scope>
     </dependency>
   </dependencies>
+  
+  <properties>
+  	<maven.compiler.source>1.7</maven.compiler.source>
+  	<maven.compiler.target>1.7</maven.compiler.target> 	
+  </properties>
 
   <build>
     <plugins>
